# bees

./: .gitignore  Claude.md  README.md  batch_fix_tests.py  comprehensive_test_fix.py  config.yaml  fix_tests.py  lifecycle_tests.txt  mass_fix_index_generator.py  master_plan.md  opencode.json  pyproject.toml  remaining_tool_tests.txt  scan_validate_tests.txt  test_categorization.md  test_categorization_raw.csv  test_categorization_verification.md  test_tools.py
.beads/: issues.jsonl
.bees/: config.json  corruption_report.json  queries.yaml
docs/: PYPI_README.md  advanced-usage.md  api-reference.md  configuration.md  custom-resolvers.md  deployment.md  http-transport-test-report.md  http-transport.md  integration.md  migration-guide.md  queries.md  schema.md  troubleshooting.md
docs/architecture/: caching.md  configuration.md  deployment.md  design_principles.md  mcp_server.md  queries.md  relationships.md  storage.md  testing.md  validation.md
docs/archive/: stdio-transport.md
docs/examples/: claude-config-http.json
docs/guides/: docs_guide.md  engineering-best-practices.md  test_review_guide.md
docs/plans/: NewFeatures.md  PRD.md  deletion_plan_findings.md  hives.md  master_plan.md  master_plan.md.backup  master_plan_deletion_plan.md  roots.md  switch-to-http-transport.md
resolvers/: bee_resolver.py
scripts/: benchmark.py  generate_demo_tickets.py
src/: cache.py  cli.py  config.py  constants.py  corruption_state.py  fast_parser.py  graph_executor.py  hive_compat.py  hive_utils.py  id_utils.py  index_generator.py  linter.py  linter_report.py  main.py  mcp_clone_bee.py  mcp_egg_ops.py  mcp_help.py  mcp_hive_ops.py  mcp_hive_utils.py  mcp_id_utils.py  mcp_index_ops.py  mcp_move_bee.py  mcp_query_ops.py  mcp_relationships.py  mcp_repo_utils.py  mcp_roots.py  mcp_server.py  mcp_ticket_ops.py  mcp_undertaker.py  models.py  parser.py  paths.py  pipeline.py  query_parser.py  query_storage.py  reader.py  relationship_sync.py  repo_context.py  repo_utils.py  search_executor.py  (+7 more)
tests/: TESTING.md  conftest.py  helpers.py  test_cache.py  test_cli.py  test_cli_clone_bee.py  test_cli_commands.py  test_cli_serve.py  test_cli_setup.py  test_cli_sting.py  test_clone_bee.py  test_colonize_hive.py  test_config.py  test_config_registration.py  test_conftest.py  test_constants.py  test_corruption_handling.py  test_corruption_state.py  test_create_ticket.py  test_create_ticket_hive_validation.py  test_delete_ticket.py  test_egg.py  test_fast_parser.py  test_fixture_migration.py  test_fixtures.py  test_generate_demo_tickets.py  test_get_status_values.py  test_get_types.py  test_graph_executor.py  test_help.py  test_hive_utils.py  test_http_endpoints.py  test_id_utils.py  test_id_validation.py  test_index_generator.py  test_linter.py  test_linter_cycles.py  test_linter_directory_enforcement.py  test_linter_hive_validation.py  test_linter_report.py  (+45 more)
tests/integration/: __init__.py  test_bidirectional_sync.py  test_http_server.py
tickets/: index.md
tickets/epics/: bees-0gw.md  bees-260.md  bees-cjc.md  bees-dq5.md  bees-dqd.md  bees-evw.md  bees-gva.md  bees-hht.md  bees-j4i.md  bees-m3s.md  bees-mph.md  bees-np4.md  bees-qsy.md  bees-uef.md  bees-vpz.md  bees-w0y.md  bees-xyz.md  bees-y7p.md  sample-epic.md
tickets/subtasks/: bees-0e0.md  bees-1z8.md  bees-5lu.md  bees-698.md  bees-6h1.md  bees-6jt.md  bees-80c.md  bees-bb1.md  bees-dfy.md  bees-eka.md  bees-gvr.md  bees-hcy.md  bees-hob.md  bees-ij1.md  bees-kvw.md  bees-lul.md  bees-mmj.md  bees-r2h.md  bees-s98.md  bees-t6x.md  bees-uf0.md  bees-uhq.md  bees-uzp.md  bees-wcd.md  bees-wgl.md  bees-wic.md  bees-wlw.md  bees-zdr.md  bees-zoh.md  bees-zp5.md  sample-subtask.md
tickets/tasks/: bees-1s2.md  bees-2hs.md  bees-3oh.md  bees-3zc.md  bees-6hl.md  bees-7be.md  bees-8ik.md  (+18 more)
(+575 files in other folders)
