[tool.poetry]
name = "bees"
version = "0.1.0"
description = "A markdown-based ticket management system designed for LLMs"
authors = ["Gabe Mahoney <gmahoney@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
fastmcp = "^2.14.4"
watchdog = "^6.0.0"
httpx = "^0.28.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
start-mcp = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "needs_real_git_check: Tests that require real git repository validation (not mocked)",
    "no_repo_context: Tests that run without repo_root context set"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
