[project]
name = "bees-md"
version = "0.1.3"
description = "A markdown-based ticket management system designed for LLMs"
requires-python = ">=3.10"
readme = "docs/PYPI_README.md"
license = {text = "MIT"}
authors = [{name = "Gabe Mahoney"}]
keywords = ["tickets", "task-management", "mcp", "llm", "ai"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Environment :: Console",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/gabemahoney/bees"
Repository = "https://github.com/gabemahoney/bees"

[project.optional-dependencies]
serve = ["fastmcp>=3.0.2"]

[project.scripts]
bees = "src.cli:main"

[tool.poetry]
name = "bees-md"
version = "0.1.3"
description = "A markdown-based ticket management system designed for LLMs"
authors = ["Gabe Mahoney"]
readme = "docs/PYPI_README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.3"
fastmcp = {version = "^3.0.2", optional = true}

[tool.poetry.extras]
serve = ["fastmcp"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.1"
radon = "^6.0.1"
watchdog = "^6.0.0"

[tool.poetry.scripts]
bees = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "needs_real_git_check: Tests that require real git repository validation (not mocked)",
    "no_repo_context: Tests that run without repo_root context set",
    "integration: Integration tests that perform full filesystem round-trips",
    "needs_real_config: Tests that need real ~/.bees/config.json (opt out of config mocking)"
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"scripts/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
